<resources>
    <string name="app_name">Cartelera cineteca</string>
    <string name="title_activity_main">MainActivity</string>
    <!--Labels-->
    <string name="label_titulo">Titulo Pelicula</string>
    <string name="label_ficha">Ficha tecnica</string>
    <string name="label_sinopsis">Mónica, una trabajadora social, debe enfrentar la compleja enfermedad visual de su hijo de once años, quien requiere un urgente trasplante de córnea para evitar la ceguera.  Agobiada...</string>
    <string name="label_horarios">Martes 08 de marzo de 2016\nSALA 7: 15:30, 17:45</string>
    <string name="label_vermas">Ver mas</string>
    <string name="label_compartir">Compartir</string>
    <string name="label_acalendario">Agendar</string>
    <string name="label_compartir_ventana">Comparte esta pelicula con: </string>
    <!--MENUS-->
    <string name="menu_dia">Busca por dia</string>
    <!--TitleBar-->
    <string name="title_detail">Detalle pelicula</string>
    <string name="title_cartelera">Cartelera</string>
    <!--messages-->
    <string name="message_no_network">No cuenta con una conexi\u00f3n a internet, por lo tanto la aplicaci\u00f3n se cerrara</string>
    <string name="message_server_error">No se pudo establecer comunicaci\u00f3n con el servidor</string>
</resources>
