<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardPelicula"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:id="@+id/mainWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/headerWrapper"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewPelicula"
                    android:src="@drawable/cineteca_logo"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_format_title_grey600_24dp"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_titulo"
                    android:id="@+id/textViewTitulo"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_filmstrip_grey600_24dp"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_sinopsis"
                    android:id="@+id/textViewSinopsis" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_calendar_clock_grey600_24dp"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/label_horarios"
                    android:id="@+id/textViewHorarios" />

                <View
                    android:layout_width="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_eye_grey600_24dp"
                        android:drawablePadding="5dp"
                        android:text="@string/label_vermas"
                        android:id="@+id/textViewMas" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_compartir"
                        android:drawableLeft="@drawable/ic_share_grey600_24dp"
                        android:drawablePadding="5dp"
                        android:layout_weight="1"
                        android:id="@+id/textViewCompartir" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_acalendario"
                        android:drawableLeft="@drawable/ic_calendar_plus_grey600_24dp"
                        android:drawablePadding="5dp"
                        android:layout_weight="1"
                        android:id="@+id/textViewCalendario" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>